--- a/menu.css
+++ b/menu.css
@@ -284,6 +284,33 @@ body {
 .our-menu #list .active {
   color: #ffc492;
 }
+.our-menu .menu {
+  gap: 1.3%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.our-menu .menu .item-menu {
+  width: 32%;
+  margin-top: 1rem;
+}
+.our-menu .menu .item-menu img {
+  width: 100%;
+  max-height: 16rem;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.our-menu .menu .item-menu .title {
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem;
+  background: #34292d;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  font-weight: 500;
+}
+.our-menu .menu .item-menu .title .price {
+  font-family: "Poppins";
+}
 .our-menu .menu .row {
   display: flex;
   margin-top: 1rem;
