--- a/menu.scss
+++ b/menu.scss
@@ -278,6 +278,31 @@ body {
     }
   }
   .menu {
+    gap: 1.3%;
+    display: flex;
+    flex-wrap: wrap;
+    .item-menu{
+      width: 32%;
+      margin-top: 1rem;
+      img {
+        width: 100%;
+        max-height: 16rem;
+        -o-object-fit: cover;
+        object-fit: cover;
+      }
+      .title {
+        display: flex;
+        justify-content: space-between;
+        padding: 1.5rem;
+        background: #34292d;
+        font-size: 1.25rem;
+        line-height: 1.5;
+        font-weight: 500;
+        .price {
+          font-family: "Poppins";
+        }
+      }
+    }
     .row {
       display: flex;
       margin-top: 1rem;
