--- a/know-more.css
+++ b/know-more.css
@@ -196,7 +196,7 @@ body {
   }
 }
 .know-more .left {
-  width: 50%;
+  width: 100%;
   line-height: 1.5rem;
 }
 @media (max-width: 768px) {
@@ -220,10 +220,12 @@ body {
 }
 .know-more .left h1 {
   margin-top: 2rem;
+  padding-bottom: 2rem;
 }
 .know-more .left p {
   color: #9d9999;
   font-family: "Poppins";
+  padding-bottom: 2rem;
 }
 .know-more .left .mid {
   gap: 1rem;
@@ -277,7 +279,7 @@ body {
 .know-more .right {
   position: relative;
   display: flex;
-  width: 50%;
+  width: 100%;
   justify-content: end;
   gap: 2rem;
 }
@@ -299,6 +301,130 @@ body {
 }
 .know-more .right .special {
   margin-top: 5rem;
+}
+
+.mid-container {
+  padding-top: 5rem;
+  padding-bottom: 3rem;
+}
+.mid-container .best-coffee .image {
+  position: relative;
+}
+.mid-container .best-coffee .image img {
+  -o-object-fit: auto, cover;
+     object-fit: auto, cover;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .mid-container .best-coffee .image img {
+    height: 28rem;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: 0px 0px, 50% 50%;
+       object-position: 0px 0px, 50% 50%;
+  }
+}
+.mid-container .best-coffee .image .text {
+  color: white;
+  position: absolute;
+  z-index: 2;
+  padding: 6rem 2rem;
+  max-width: 32rem;
+}
+.mid-container .best-coffee .image .text span {
+  color: #ffc492;
+}
+.mid-container .best-coffee .image .text p {
+  color: #9d9999;
+  font-family: "Poppins";
+}
+.mid-container .best-coffee .image .overlay {
+  position: absolute;
+  z-index: 1;
+}
+.mid-container .history {
+  background-color: #1f1d21;
+  color: white;
+  padding: 6rem 2rem;
+}
+.mid-container .history .menu-history {
+  display: flex;
+}
+@media (max-width: 768px) {
+  .mid-container .history .menu-history {
+    display: block;
+  }
+}
+.mid-container .history .menu-history .item-menu {
+  display: block;
+  position: relative;
+}
+@media (max-width: 768px) {
+  .mid-container .history .menu-history .item-menu {
+    display: flex;
+  }
+}
+.mid-container .history .menu-history .item-menu .line {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 1px;
+  border-style: dashed;
+  border-width: 1px;
+  border-color: hsla(0, 0%, 100%, 0.15);
+}
+@media (max-width: 768px) {
+  .mid-container .history .menu-history .item-menu .line {
+    justify-content: center;
+    width: 1px;
+    height: 100%;
+    position: absolute;
+  }
+}
+.mid-container .history .menu-history .item-menu .line .line-dot {
+  position: absolute;
+  left: 0rem;
+  top: auto;
+  right: auto;
+  bottom: auto;
+  width: 20%;
+  height: 4px;
+  background-color: #ffc492;
+}
+@media (max-width: 768px) {
+  .mid-container .history .menu-history .item-menu .line .line-dot {
+    left: auto;
+    top: 0%;
+    right: auto;
+    bottom: auto;
+    width: 0.25rem;
+    height: 20%;
+  }
+}
+.mid-container .history .menu-history .item-menu .text {
+  padding-right: 2rem;
+}
+@media (max-width: 768px) {
+  .mid-container .history .menu-history .item-menu .text {
+    padding-right: 0rem;
+    padding-left: 2rem;
+  }
+}
+.mid-container .history .menu-history .item-menu .text h3 {
+  padding-top: 2rem;
+  font-family: "Poppins";
+}
+.mid-container .history .menu-history .item-menu .text span {
+  padding-top: 1.5rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  font-weight: 500;
+}
+.mid-container .history .menu-history .item-menu .text p {
+  padding-top: 1.5rem;
+  color: #9d9999;
+  font-family: "Poppins";
 }
 
 .map {
